# silverSword-gameEngine

./: README.md  editor-struct.txt
editorCore/libs/graphics/include/: Frustum.h  Rendering.h
editorCore/libs/graphics/lib/: silverGraphics.lib
editorCore/libs/maths/include/: Matrix.h
editorCore/src/: CMakeLists.txt  main.cpp
grafxMod/libs/maths/header/: NameSpace.h  Vector3D.h
grafxMod/libs/maths/lib/: silverMaths.lib
grafxMod/src/: CMakeLists.txt  Camera.cpp  Frustum.cpp  Inputs.cpp  Inputs.h  Rendering.cpp  Rendering.h
mathsMod/src/: CMakeLists.txt  Matrix.cpp  Quaternion.h  Vector3D.cpp
silverGraphic/libs/maths/header/: Matrix.h  Vector3D.h
silverGraphic/libs/maths/lib/: silverMaths.lib
silverGraphic/silverGraphic/: CMakeLists.txt  Camera.cpp  Camera.h  Frustum.cpp  Rendering.cpp  Rendering.h  silverGraphics.sln  silverGraphics.vcxproj  silverGraphics.vcxproj.filters
silverMath/silverMaths/silverMaths/: Defines.h  Matrix.cpp  Quaternion.cpp  Vector3D.cpp  silverMaths.sln  silverMaths.vcxproj.filters
silverMaths/silverMaths/silverMaths/: silverMaths.vcxproj  silverMaths.vcxproj.filters  vector3d.cpp
silverMaths/silverMaths/silverMaths/x64/Debug/silverMaths.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  silverMaths.lastbuildstate
silverMaths/silverMaths/x64/Debug/: silverMaths.idb  silverMaths.lib
silverSword/editor/common/maths/include/: defines.h  namespace.h  vectorSpace.h
silverSword/editor/common/maths/src/: vectorSpace.cpp
silverSword/libs/maths/include/: vector3d.h
silverSword/libs/maths/lib/: silverMaths.lib
silverSword/project/silversword/: silversword.sln
silverSword/project/silversword/silversword/: main.cpp  silversword.vcxproj
silverSword/project/silversword/silversword/x64/Debug/: silversword.exe.recipe  silversword.ilk  vc143.idb
silverSword/project/silversword/silversword/x64/Debug/silversword.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  silversword.lastbuildstate
silverswor/libs/libs/graphics/lib/: Graphics.lib
silverswor/project/silverswor/silversword/: main.cpp
